# soma_microservice

./: .gitignore  Dockerfile.cuda  Dockerfile.soma_face  README.md  docker-compose.yml
soma_core/: Cargo.toml  README.md
soma_core/examples/: load_tract.rs
soma_core/src/: blip_model.rs  common_utils.rs  lib.rs  onnx_backend.rs
soma_db/: deploy.sh  docker-compose.yml  env.example
soma_db_api/: Cargo.toml  env.example
soma_db_api/src/: handler.rs  server.rs
soma_db_api/src/handlers/: face.rs  frame.rs  mod.rs
soma_db_api/src/operators/: insertion.rs  mod.rs  queries.rs
soma_db_api/src/utils/: db_utils.rs  mod.rs
soma_desc/: Cargo.toml  env.example
soma_desc/src/: main.rs
soma_desc/src/core/: blip_model.rs  mod.rs  splash.rs
soma_desc/src/utils/: image_utils.rs  mod.rs
soma_desc/src/webserver/: handler.rs  mod.rs  service.rs
soma_face/: .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.detect  Makefile  README.md  docker-compose.minimal.yml  docker-compose.yml  get_models.py
soma_face/examples/: tract_yolo.rs
soma_face/src/: lib.rs  server.rs
soma_face/src/core/: common_utils.rs  mod.rs  onnx_backend.rs  splash.rs
soma_face/src/get_face/: mod.rs  retinaface.rs  yolo.rs
soma_face/src/get_face_vec/: arcface.rs  mod.rs
soma_face/src/webserver/: common_utils.rs  documentation.rs  handler.rs  mod.rs  responder.rs  route_functions.rs  service.rs
soma_rest_api/: Cargo.toml  env.example
soma_rest_api/src/: common_utils.rs  handlers.rs  main.rs  service.rs
