[package]
name = "soma_rest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = { version = "0.7.2", features = ["tempfile"] }
actix-web = "4.8.0"
anyhow = "1.0.86"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
image = "0.25.2"
mime = "0.3.17"
postgres = "0.19.8"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = "1.39.2"
soma_face = {path="../soma_face"}
soma_db_api = {path="../soma_db_api"}
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4"] }
lazy_static = "1.5.0"
env_logger = "0.11.5"
base64 = "0.22.1"
tempfile = "3.2.0"
